fixed alignment issues with static navbar

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ overflow: hidden;
 }
 #mainimage h1{
   color: #ffffff;
-  padding-top: 20vh;
+  padding-top: 40vh;
   font-weight: bold;
   font-size: 60px;
   text-align: center;
@@ -127,7 +127,7 @@ overflow: hidden;
 
 }
 #about{
-  height: 500px;
+  height: 600px;
   width: 100%;
   background-image: url('images/edge.jpg');
   background-size: cover;
@@ -139,7 +139,7 @@ overflow: hidden;
   font-size: 60px;
   font-weight: bold;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 80px;
 }
 #about p{
   color: #7f8c8d;
@@ -203,6 +203,7 @@ padding-top: 50px;
     height: 100vh
   }
   #mainimage h1{
+    padding-top: 30vh;
     font-size: 40px;
   }
   #mainimage h3{
@@ -304,6 +305,7 @@ li{
 }
 @media screen and (max-width: 480px){
 #mainimage h1{
+  padding-top: 30vh;
   font-size: 40px;
   margin-left: 20px;
   margin-right: 20px;
